Ensure footer is stuck to bottom by making sure main always takes up full viewport height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ body {
     color: var(--text-color-dark);
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    /* makes sure footer is always stuck to the bottom of the screen, even on pages without much content */
     gap: 10px;
     width: 100%;
     word-wrap: break-word;
@@ -63,6 +65,7 @@ section {
     border-radius: 30px;
     margin: 0 20px;
     width: 99%;
+    /* min-height: 99vh; */
 }
 
 section div.container {
